@@ -256,6 +256,9 @@ API_EXPORT(int) ap_popenf(struct pool *, const char *name, int flg, int mode);
 
 API_EXPORT(void) ap_note_cleanups_for_file(pool *, FILE *);
 API_EXPORT(void) ap_note_cleanups_for_fd(pool *, int);
+#ifdef WIN32
+API_EXPORT(void) ap_note_cleanups_for_h(pool *, HANDLE);
+#endif
 API_EXPORT(void) ap_kill_cleanups_for_fd(pool *p, int fd);
 
 API_EXPORT(void) ap_note_cleanups_for_socket(pool *, int);
@@ -272,6 +275,9 @@ API_EXPORT(void) ap_pregfree(pool *p, regex_t * reg);
 
 API_EXPORT(int) ap_pfclose(struct pool *, FILE *);
 API_EXPORT(int) ap_pclosef(struct pool *, int fd);
+#ifdef WIN32
+API_EXPORT(int) ap_pcloseh(struct pool *, HANDLE hDevice);
+#endif
 
 /* routines to deal with directories */
 API_EXPORT(DIR *) ap_popendir(pool *p, const char *name);
